--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>3.6.3</version>
         </dependency>
         <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx</artifactId>
+            <version>3.9.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
